Updated parent pom, added current liferay version to properties.

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <groupId>se.vgregion.common</groupId>
     <artifactId>profile-open</artifactId>
-    <version>2.13</version>
+    <version>2.14</version>
   </parent>
 
   <groupId>se.vgregion.glasogonbidrag</groupId>
@@ -28,6 +28,7 @@
     <compileTarget>1.7</compileTarget>
     <spring.fw.version>3.2.14.RELEASE</spring.fw.version>
     <jsf.version>2.2.8</jsf.version>
+    <liferay.version>6.2.10.15</liferay.version>
   </properties>
 
 </project>
