--- a/core-bc/modules/portlet/pom.xml
+++ b/core-bc/modules/portlet/pom.xml
@@ -52,7 +52,6 @@ Generation time : 2015-01-14 09:02:50 CET
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>2.0.2</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -70,9 +69,9 @@ Generation time : 2015-01-14 09:02:50 CET
     <dependencies>
 
         <dependency>
-            <groupId>se.vgregion.glasogonbidrag</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>glasogonbidrag-core-bc-composite-svc</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
