--- a/core-bc/pom.xml
+++ b/core-bc/pom.xml
@@ -11,11 +11,11 @@ Generation time : 2015-01-14 09:02:50 CET
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>se.vgregion.glasogonbidrag</groupId>
-    <artifactId>glasogonbidrag-system</artifactId>
+    <artifactId>glasogonbidrag-stubs-system</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
   <groupId>se.vgregion.glasogonbidrag</groupId>
-  <artifactId>glasogonbidrag-core-bc</artifactId>
+  <artifactId>glasogonbidrag-stubs-core-bc</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>${project.artifactId}</name>
