--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   </parent>
 
   <groupId>se.vgregion.glasogonbidrag</groupId>
-  <artifactId>glasogonbidrag-system</artifactId>
+  <artifactId>glasogonbidrag-stubs-system</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>${project.artifactId}</name>
